Fixed codesmells with new java features.